# courses-v2

application/rust-auth-service/: Cargo.toml
application/rust-auth-service/src/: client.rs  main.rs  protocol.rs
application/rust-auth-service/src/cmd/: get.rs  mod.rs  serve.rs
application/rust-auth-service/src/server/: mod.rs
application/rust-auth-service/tests/: end_to_end.rs
