[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.16"
